--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3523,6 +3523,8 @@ input, select, textarea {
 					border-radius: 100%;
 					display: block;
 					width: 100%;
+					height: 100%;
+                                        object-fit: contain;
 				}
 
 	body.is-touch #banner {
