--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3524,7 +3524,7 @@ input, select, textarea {
 					display: block;
 					width: 100%;
 					height: 100%;
-                                        object-fit: contain;
+                                        object-fit: cover;
 				}
 
 	body.is-touch #banner {
